--- a/app/Gemfile
+++ b/app/Gemfile
@@ -1,7 +1,5 @@
 source 'https://rubygems.org'
 
-gem 'foundation-rails'
-
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.5'
 # Use postgresql as the database for Active Record
@@ -47,3 +45,4 @@ group :development do
   gem 'spring'
 end
 
+gem 'foundation-rails', '~>5.5.0'
